# dioxus-free-icons

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
src/: main.rs
