# monorepo only work when using virtual manifest
# see: https://github.com/rust-lang/cargo/issues/7467#issuecomment-867632379
[workspace]
resolver = "2"
members = ["packages/codegen", "packages/example", "packages/lib"]

[workspace.dependencies]
dioxus = { version = "0.7", default-features = false, features = [
    "html",
    "macro",
    "signals",
] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
